--- a/rust/programming_rust_2nd_ed/mandelbrot/Cargo.toml
+++ b/rust/programming_rust_2nd_ed/mandelbrot/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
 [dependencies]
 num = "0.1.27"
 image = "0.13.0"
+crossbeam = "0.2.8"
+num_cpus = "1.8.0"
